# math-calc-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TEST_RESULTS_UPDATED.md  clippy.toml
.cargo/: config.toml
.claude/: CLAUDE.md
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  INDEX.md  TOOLS.md
scripts/: test_stdio.py
src/: lib.rs  main.rs  server.rs
src/engine/: bigdecimal_ext.rs  expression.rs  expression_exact.rs  mod.rs  unit_registry.rs
src/mcp/message/: builder.rs  expression_error.rs  helpers.rs
src/tools/: analog_electronics.rs  basic.rs  calculus.rs  chemistry.rs  combinatorics.rs  complex.rs  cooking.rs  crypto.rs  datetime.rs  digital_electronics.rs  financial.rs  geometry.rs  graphing.rs  matrices.rs  measure_reference.rs  mod.rs  network.rs  numeric.rs  physics.rs  printing.rs  programmable.rs  scientific.rs  statistics.rs  unit_converter.rs  vector.rs
src/transport/: async_stdio.rs  mod.rs
