[package]
name = "arithma"
version = "0.2.0"
edition = "2024"
rust-version = "1.94"
authors = ["Fabricio Archanjo <fabricio@archanjo.com>"]
description = "The Ultimate LLM Calculator Engine — 87 precision math tools via MCP. Pure Rust, zero C deps, arbitrary-precision arithmetic, finance, electronics, networking."
license = "Apache-2.0"
repository = "https://github.com/farchanjo/arithma"
homepage = "https://github.com/farchanjo/arithma"
documentation = "https://github.com/farchanjo/arithma#readme"
readme = "README.md"
keywords = ["mcp", "calculator", "math", "stdio", "anthropic"]
categories = ["command-line-utilities", "mathematics", "science"]

# Strict lint profile applied by default to every `cargo build`, `cargo test`,
# and `cargo clippy` invocation. Treats warnings — including the full pedantic
# and nursery sets — as errors so drift cannot slip in silently.
[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

[lib]
name = "math_calc"
path = "src/lib.rs"

[[bin]]
name = "arithma"
path = "src/main.rs"

[dependencies]
# MCP SDK (stdio transport)
rmcp = { version = "1.5", features = ["server", "transport-io"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std", "io-util", "sync", "signal"] }

# Serialization / JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Arbitrary-precision arithmetic (DECIMAL128 semantics, HALF_UP rounding)
bigdecimal = { version = "0.4", features = ["serde"] }
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"

# Arbitrary-precision transcendentals with correct rounding (128-bit precision)
astro-float = "0.9"

# DateTime with IANA timezone support (embedded timezone database)
jiff = { version = "0.2", features = ["serde"] }

# Portable SIMD (auto-dispatches SSE2/AVX2/AVX-512/NEON)
wide = "0.7"

# Logging to stderr (stdio transport requires stdout clean)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Lazy statics for lookup tables (Rust 1.80+ has OnceLock/LazyLock in std)

[dev-dependencies]
approx = "0.5"
pretty_assertions = "1"

# Release profile: aggressive optimization, CPU-native by default via .cargo/config.toml
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false

# Portable release: override with `cargo build --profile release-portable`
# Build with RUSTFLAGS="-C target-cpu=x86-64-v3" for broad compatibility while keeping AVX2.
[profile.release-portable]
inherits = "release"

# Dev profile: tuned for fast incremental builds
[profile.dev]
opt-level = 0
debug = true
incremental = true
